Fixed layout issues + minor fixes

--- a/src/components/TasksWidget/index.scss
+++ b/src/components/TasksWidget/index.scss
@@ -12,7 +12,7 @@
   &__form {
     width: 100%;
     &-input {
-      @include everse-input();
+      @include everse-input-override;
     }
   }
 
